--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.profiles.active=dev
-
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=sa
+spring.datasource.url=jdbc:h2:~/agileXpert;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+#spring.jpa.show-sql=true
